Created the first UseCase with the route, checked it and it's creating already a provider into the database

--- a/donRaulHardwaresStore/src/main/resources/application.properties
+++ b/donRaulHardwaresStore/src/main/resources/application.properties
@@ -1,1 +1,1 @@
-
+spring.data.mongodb.uri = mongodb+srv://feliperamirezrivera:sofkaUCalendar-Dojo@sofkaucalendar.ibfyo.mongodb.net/DonRaulHardwares?retryWrites=true&w=majority
