--- a/donRaulHardwaresStore/pom.xml
+++ b/donRaulHardwaresStore/pom.xml
@@ -56,6 +56,12 @@
 			<artifactId>springdoc-openapi-webflux-ui</artifactId>
 			<version>1.6.8</version>
 		</dependency>
+		<dependency>
+			<groupId>org.assertj</groupId>
+			<artifactId>assertj-core</artifactId>
+			<version>3.22.0</version>
+			<scope>test</scope>
+		</dependency>
 	</dependencies>
 
 	<build>
